[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/chooser/ship_preview.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/chooser/chooser.gd" type="Script" id=2]



[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="chooser" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
handle_input_locally = false
usage = 3
render_target_update_mode = 3

[node name="ship_preview" parent="Viewport" instance=ExtResource( 1 )]

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
texture = SubResource( 1 )
expand = true
stretch_mode = 4
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="vbox"]
margin_right = 82.0
margin_bottom = 14.0
text = "ship chooser"

[node name="body" type="Label" parent="vbox"]
margin_top = 18.0
margin_right = 82.0
margin_bottom = 32.0
text = "cockpit"

[node name="body_list" type="ItemList" parent="vbox"]
margin_top = 36.0
margin_right = 82.0
margin_bottom = 45.0
auto_height = true

[node name="cockpits" type="Label" parent="vbox"]
margin_top = 49.0
margin_right = 82.0
margin_bottom = 63.0
text = "cockpit"

[node name="cockpit_list" type="ItemList" parent="vbox"]
margin_top = 67.0
margin_right = 82.0
margin_bottom = 76.0
auto_height = true

[node name="wings" type="Label" parent="vbox"]
margin_top = 80.0
margin_right = 82.0
margin_bottom = 94.0
text = "wings"

[node name="wing_list" type="ItemList" parent="vbox"]
margin_top = 98.0
margin_right = 82.0
margin_bottom = 107.0
auto_height = true

[node name="rear" type="Label" parent="vbox"]
margin_top = 111.0
margin_right = 82.0
margin_bottom = 125.0
text = "rear"

[node name="rear_list" type="ItemList" parent="vbox"]
margin_top = 129.0
margin_right = 82.0
margin_bottom = 138.0
auto_height = true
